--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   <body>
     <h1>Hello, world!</h1>
 
-    <script src="./script.js"></script>
+    <script src="./script_04.js"></script>
   </body>
 </html>
